@@ -881,6 +881,7 @@ EXTRA_DIST += \
 	Source/WebCore/css/view-source.css \
 	Source/WebCore/css/WebKitFontFamilyNames.in \
 	Source/WebCore/dom/EventFactory.in \
+	Source/WebCore/dom/EventTargetFactory.in \
 	Source/WebCore/dom/make_names.pl \
 	Source/WebCore/dom/make_event_factory.pl \
 	Source/WebCore/html/HTMLAttributeNames.in \
