@@ -1,3 +1,15 @@
+2011-10-26  Alejandro G. Castro  <alex@igalia.com>
+
+        [GTK] Fix distcheck compilation
+        https://bugs.webkit.org/show_bug.cgi?id=70921
+
+        Add EventTargetFactory.in to the dist files, required after
+        r98388.
+
+        Reviewed by Martin Robinson.
+
+        * GNUmakefile.am:
+
 2011-10-26  Michael Saboff  <msaboff@apple.com>
 
         Increase StringImpl Flag Bits for 8 bit Strings
